# BackendERP-irrelevant

./: .gitignore  app.py  config.py  openapi.json  pyproject.toml  requirements.txt
api/: __init__.py  auth.py  clients.py  documents.py  expenses.py  incomes.py  payments.py  projects.py  reports.py
attached_assets/: Pasted-Prompt-detallado-para-desarrollar-el-Backend-en-Flask-para-Control-Fresco-Objetivo-principal-Desar-1745333969584.txt  jpgomezm1-control-fresco.txt
migrations/: README
models/: __init__.py  client.py  document.py  expense.py  income.py  payment.py  project.py  user.py
schemas/: __init__.py  client.py  document.py  expense.py  income.py  payment.py  project.py  user.py
scripts/: export_openapi.py
tests/: __init__.py  conftest.py  test_auth.py  test_clients.py
utils/: __init__.py  currency.py  file_storage.py  pagination.py
